# Rentx/src/routes/categories.routes.ts
@@ -2,8 +2,8 @@
 import { Router } from "express";
 import multer from "multer";
 import { CreateCategoryController } from "../modules/cars/useCases/createCategory/CreateCategoryController";
-import { importCategoryController } from "../modules/cars/useCases/importCategory";
-import { listCategoriesController } from "../modules/cars/useCases/listCategories";
+import { ImportCategoryController } from "../modules/cars/useCases/importCategory/ImportCategoryController";
+import { ListCategoriesController } from "../modules/cars/useCases/listCategories/ListCategoriesController";
 
 //categoriesRoutes receberá Router() para permitir a criação de rotas (post, get e etc)
 const categoriesRoutes = Router();
@@ -16,16 +16,14 @@ const upload = multer({
 });
 
 const createCategoryController = new CreateCategoryController();
+const importCategoryController = new ImportCategoryController();
+const listCategoriesController = new ListCategoriesController();
 
 // O caminho pode ser '/', pois está sendo passado diretamente no arquivo 'server.ts'
 categoriesRoutes.post("/", createCategoryController.handle);
 
-categoriesRoutes.get("/", (req, res) => {
-	return listCategoriesController.handle(req, res);
-});
+categoriesRoutes.get("/", listCategoriesController.handle);
 
-categoriesRoutes.post("/import", upload.single("file"), (req, res) => {
-	return importCategoryController.handle(req, res);
-});
+categoriesRoutes.post("/import", importCategoryController.handle);
 
 export { categoriesRoutes };
