# Rentx/src/routes/specification.routes.ts
@@ -1,16 +1,14 @@
-import { Router } from 'express';
-import { createSpecificationController } from '../modules/cars/useCases/createSpecification';
-import { listSpecificationController } from '../modules/cars/useCases/listSpecification';
+import { Router } from "express";
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
+import { ListSpecificationController } from "../modules/cars/useCases/listSpecification/ListSpecificationController";
 
 const specificationsRoutes = Router();
 
+const createSpecificationController = new CreateSpecificationController();
+const listSpecificationController = new ListSpecificationController();
 
-specificationsRoutes.post('/', (req, res) => {
-    return createSpecificationController.handle(req, res);
-});
+specificationsRoutes.post("/", createSpecificationController.handle);
 
-specificationsRoutes.get('/', (req, res) => {
-    return listSpecificationController.handle(req, res);
-})
+specificationsRoutes.get("/", listSpecificationController.handle);
 
-export { specificationsRoutes }
+export { specificationsRoutes };
